--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"AWS_ACCESS_KEY_ID": "AKIAIDQEIVUKSKI5OS4Q",
-	"AWS_SECRET_ACCESS_KEY": "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",
+	"AWS_ACCESS_KEY_ID": "AKIAIS4HRLDP3ECHGXBA",
+	"AWS_SECRET_ACCESS_KEY": "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",
 	"AWS_BUCKET": "akiaidqeivukski5os4qspace-view"
 }
